# Project-Manager

./: LICENSE
src/csharp/: .gitignore  csharp.sln
src/csharp/app/: Directory.Packages.props  app.sln
src/csharp/app/app/: App.axaml  App.axaml.cs  ViewLocator.cs
src/csharp/app/app.Android/: MainActivity.cs  app.Android.csproj
src/csharp/app/app.Android/Properties/: AndroidManifest.xml
src/csharp/app/app.Browser/: Program.cs  app.Browser.csproj
src/csharp/app/app.Browser/Properties/: launchSettings.json
src/csharp/app/app.Browser/wwwroot/: index.html
src/csharp/app/app.Desktop/: Program.cs  app.Desktop.csproj
src/csharp/app/app/ViewModels/: MainViewModel.cs  ViewModelBase.cs
src/csharp/app/app/Views/: MainView.axaml  MainView.axaml.cs  MainWindow.axaml
src/python/: .gitignore  pyproject.toml
