[project]
name = "python"
version = "0.1.0"
description = ""
authors = [
    {name = "OmegaCrimson",email = "nightangelyt01@gmail.com"}
]
requires-python = "3.12.*"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "customtkinter (>=5.2.2,<6.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "tkinterweb (>=4.19.2,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "nuitka (>=4.0,<5.0)"
]
